# os_lab6

./: CMakeLists.txt  childNode.cpp  main.cpp  sf.cpp  sf.h
